<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSettingTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/screen_setting" />

        <Switch
            android:id="@+id/swLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/switch_language"
            android:textOff="Việt Nam"
            android:textOn="English" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_setting_auto_start" />

        <Button
            android:id="@+id/btnSettingApply"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/button_setting_apply" />
    </LinearLayout>
</LinearLayout>
