<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="40dp"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/facebook_logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_txtErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alert_error_message"
                    android:textColor="@color/colorAlertPrimary"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/login_txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Name" />

                <EditText
                    android:id="@+id/login_txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:password="true"
                    android:text="Name" />

                <Button
                    android:id="@+id/login_btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/button_login"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/button_forgot_password"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="120dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:paddingLeft="60dp"
                    android:text="Sign Up for Facebook"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/facebook_help"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
